--- a/vATIS.Desktop/vATIS.Desktop.csproj
+++ b/vATIS.Desktop/vATIS.Desktop.csproj
@@ -63,9 +63,9 @@
 		<PackageReference Include="Jab" Version="0.10.2" PrivateAssets="all" />
 		<PackageReference Include="Serilog.Sinks.Trace" Version="4.0.0" />
 		<PackageReference Include="Slugify.Core" Version="4.0.1" />
-		<PackageReference Include="SuperSocket.WebSocket.Server" Version="2.0.0-beta.28" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
 		<PackageReference Include="Velopack" Version="0.0.942" />
+		<PackageReference Include="WatsonWebsocket" Version="4.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
