--- a/.gitignore
+++ b/.gitignore
@@ -382,6 +382,7 @@ FodyWeavers.xsd
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/launchSettings.json
 *.code-workspace
 
 # Local History for Visual Studio Code
