--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,9 @@ name: Build
 
 on:
   push:
-    branches:
-      - main
+    branches:  [main]
   pull_request:
-    branches:
-      - main
+  merge_group:
 
 jobs:
   build:
