Add websocket interface (#2)
* Basic service added

* More basic stuff stubbed out and working

* More updates

* Kinda sorta works

* Add IsPublished

* Code cleanup

* More refactoring

* Better message format and error handling

* Better startup and shutdown

* Code comments and error handling

* Remove unused usings

* Send to websocket whenver hub is updated

* Add logging and exception handling

* Change port number

* Code cleanup and more comments

* More comments

* More cleanup

* Fix merge error

* Update names

* More cleanup, add acknowledge message

* Switch to EventHandler

* Follow NetworkConnection design pattern

* Add a network connected status message

* Create specific message send methods on the websocket

* Match PublishAtisToHub

* Oops

* Remove all ATIS request handling from mainwindowviewmodel

* Major refactor and simplification

* Code cleanup, fix enum serialization

* Send textAtis with the atis update

* Fix nullable warning

* Lots of code cleanup

* More cleanup

* Rename network connection status

* Finish rename

* Fix naming error

* Send network connection status instead of isPublished

* Remove SendAsync from interface

* Fix whitespace

* More indentation fixes

* Tweak how send message methods work

* Don't send null values

* Serialize AtisType as string

* Bug fixing and simplification

* Close clients before stopping service

* Add AtisType to websocket commands

* Wait for property updates and code cleanup

* Only listen on loopback address

* Clean up stylecop warnings

* Add SuperSocket license notice

* Convert to WatsonWebSocket

* Minor cleanup

* One more comment because why not

* Add comment about loopback usage

* Set hostname and port in constructor, add logger assignment

Passing the hostname and port directly to the constructor resolves a connection issue on macOS

* Fix merge issue

* Include pressure unit and value in atis message

* Trigger stuck CI

* Trigger CI

* Clear event handlers on close, unsubscrib

--- a/vATIS.Desktop/vATIS.Desktop.csproj
+++ b/vATIS.Desktop/vATIS.Desktop.csproj
@@ -65,6 +65,7 @@
 		<PackageReference Include="Slugify.Core" Version="4.0.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.1" />
 		<PackageReference Include="Velopack" Version="0.0.942" />
+		<PackageReference Include="WatsonWebsocket" Version="4.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
