Add required extension, re-order launch, hide a few folders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "files.exclude": {
     "**/.run": true,
-    "**/.vs": true
+    "**/.vs": true,
+    "DevServer/bin": true,
+    "DevServer/obj": true
   },
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
