--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
     "README.md": "CONTRIBUTING.md,LICENSE"
-  }
+  },
+  "dotnet.defaultSolution": "vATIS.sln"
 }
