--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
   "explorer.fileNesting.patterns": {
     "README.md": "CONTRIBUTING.md,LICENSE"
   },
-  "dotnet.defaultSolution": "vATIS.sln"
+  "dotnet.defaultSolution": "vATIS.sln",
+  "cmake.sourceDirectory": "${workspaceFolder}/NativeAudio"
 }
