--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
   "files.exclude": {
     "**/.run": true,
-    "**/.vs": true
+    "**/.vs": true,
+    "DevServer/bin": true,
+    "DevServer/obj": true
   },
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
     "README.md": "CONTRIBUTING.md,LICENSE"
-  }
+  },
+  "dotnet.defaultSolution": "vATIS.sln",
+  "cmake.sourceDirectory": "${workspaceFolder}/NativeAudio"
 }
