--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,65 +1,80 @@
 {
-  "compounds": [
-    {
-      "name": "Launch dev server & debug vATIS.Desktop",
-      "configurations": [
-        "Launch dev server",
-        "Launch vATIS.Desktop - Dev server"
-      ],
-      "stopAll": true
-    }
-  ],
-  "configurations": [
-    {
-      "name": "Launch dev server",
-      "type": "coreclr",
-      "request": "launch",
-      "preLaunchTask": "Build DevServer",
-      "program": "${workspaceFolder}/DevServer/bin/Debug/net8.0/DevServer.exe",
-      "args": [],
-      "cwd": "${workspaceFolder}",
-      "stopAtEntry": false,
-      "console": "internalConsole",
-      "launchSettingsProfile": "http",
-      "launchSettingsFilePath": "${workspaceFolder}/DevServer/Properties/launchSettings.json",
-      "presentation": {
-        "hidden": true,
-        "group": "",
-        "order": 1
-      },
-      "logging": {
-        "moduleLoad": false
-      }
-    },
-    {
-      "name": "Launch vATIS.Desktop - Production",
-      "type": "coreclr",
-      "request": "launch",
-      "preLaunchTask": "Build vATIS.Desktop",
-      "program": "${workspaceFolder}/vATIS.Desktop/bin/Debug/net8.0/vATIS.exe",
-      "args": [],
-      "cwd": "${workspaceFolder}",
-      "stopAtEntry": false,
-      "console": "internalConsole",
-      "logging": {
-        "moduleLoad": false
-      }
-    },
-    {
-      "name": "Launch vATIS.Desktop - Dev server",
-      "type": "coreclr",
-      "request": "launch",
-      "preLaunchTask": "Build vATIS.Desktop",
-      "program": "${workspaceFolder}/vATIS.Desktop/bin/Debug/net8.0/vATIS.exe",
-      "args": [],
-      "cwd": "${workspaceFolder}",
-      "stopAtEntry": false,
-      "console": "internalConsole",
-      "launchSettingsProfile": "vATIS.Desktop - Dev server",
-      "launchSettingsFilePath": "${workspaceFolder}/vATIS.Desktop/Properties/launchSettings.json",
-      "logging": {
-        "moduleLoad": false
-      }
-    }
-  ]
+    "compounds": [
+        {
+            "name": "Launch dev server & debug vATIS.Desktop",
+            "configurations": [
+                "Launch dev server",
+                "Launch dev server UI - Edge",
+                "Launch vATIS.Desktop - Dev server"
+            ],
+            "stopAll": true
+        }
+    ],
+    "configurations": [
+        {
+            "name": "Launch dev server UI - Edge",
+            "request": "launch",
+            "type": "msedge",
+            "url": "http://127.0.0.1:5500/",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
+            "name": "Launch dev server UI - Chrome",
+            "request": "launch",
+            "type": "chrome",
+            "url": "http://127.0.0.1:5500/",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
+            "name": "Launch dev server",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "Build DevServer",
+            "program": "${workspaceFolder}/DevServer/bin/Debug/net8.0/DevServer.exe",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "console": "internalConsole",
+            "launchSettingsProfile": "http",
+            "launchSettingsFilePath": "${workspaceFolder}/DevServer/Properties/launchSettings.json",
+            "presentation": {
+                "hidden": true,
+                "group": "",
+                "order": 1
+            },
+            "logging": {
+                "moduleLoad": false
+            }
+        },
+        {
+            "name": "Launch vATIS.Desktop - Production",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "Build vATIS.Desktop",
+            "program": "${workspaceFolder}/vATIS.Desktop/bin/Debug/net8.0/vATIS.exe",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "console": "internalConsole",
+            "logging": {
+                "moduleLoad": false
+            }
+        },
+        {
+            "name": "Launch vATIS.Desktop - Dev server",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "Build vATIS.Desktop",
+            "program": "${workspaceFolder}/vATIS.Desktop/bin/Debug/net8.0/vATIS.exe",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "console": "internalConsole",
+            "launchSettingsProfile": "vATIS.Desktop - Dev server",
+            "launchSettingsFilePath": "${workspaceFolder}/vATIS.Desktop/Properties/launchSettings.json",
+            "logging": {
+                "moduleLoad": false
+            }
+        }
+    ]
 }
