--- a/vATIS.Desktop/vATIS.Desktop.csproj
+++ b/vATIS.Desktop/vATIS.Desktop.csproj
@@ -7,6 +7,7 @@
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
         <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <AssemblyName>vATIS</AssemblyName>
         <RootNamespace>Vatsim.Vatis</RootNamespace>
         <ApplicationIcon>Assets\MainIcon.ico</ApplicationIcon>
