--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,8 @@ on:
         default: true
 
 jobs:
-  release-linux:
-    name: Release (linux-x64)
+  build-linux:
+    name: Build (linux-x64)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -98,7 +98,7 @@ jobs:
 
           # Capture filename to ignore later so we don't upload it twice
           FILE=$(find ./velopack -type f -printf '%P\n')
-          echo "PREVIOUS_RELEASE=$FILE" >> $GITHUB_ENV
+          echo "PREVIOUS_RELEASE=$FILE" >> $GITHUB_OUTPUT
 
       - name: Velopack
         run: |
@@ -113,27 +113,15 @@ jobs:
               --outputDir ./velopack \
               --verbose
 
-      - name: Upload release assets
-        run: |
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          aws configure set region auto
-          aws configure set output "json"
-          aws configure set request_checksum_calculation when_required
-          aws configure set response_checksum_validation when_required
+      - name: Upload Linux Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-build
+          path: ./build
+          retention-days: 1
 
-          # Rename AppImage
-          mv ./velopack/org.vatsim.vatis.AppImage ./velopack/vATIS.AppImage
-
-          # Upload release assets
-          aws s3 sync ./velopack s3://vatis-releases/linux \
-            --exclude "$PREVIOUS_RELEASE" \
-            --exclude "assets.linux.json" \
-            --exclude "RELEASES-linux" \
-            --endpoint-url "${{secrets.AWS_ENDPOINT}}"
-
-  release-macos:
-    name: Release (macos-universal)
+  build-macos:
+    name: Build (macos-universal)
     runs-on: macos-latest
     env:
       APPLE_CERTIFICATE_NAME: ${{ secrets.APPLE_CERTIFICATE_NAME }}
@@ -302,7 +290,7 @@ jobs:
 
           # Capture filename to ignore later so we don't upload it twice
           FILE=$(find ./velopack -type f | sed 's|./velopack/||')
-          echo "PREVIOUS_RELEASE=$FILE" >> $GITHUB_ENV
+          echo "PREVIOUS_RELEASE=$FILE" >> $GITHUB_OUTPUT
 
       - name: Velopack
         run: |
@@ -367,30 +355,16 @@ jobs:
           # Staple Notarization Ticket
           xcrun stapler staple "./velopack/vATIS.dmg"
           xcrun stapler validate "./velopack/vATIS.dmg"
-      
-      - name: Downgrade AWS CLI
-        run: |
-          curl "https://awscli.amazonaws.com/AWSCLIV2-2.22.35.pkg" -o "AWSCLIV2.pkg"
-          sudo installer -pkg AWSCLIV2.pkg -target /
 
-      - name: Upload release assets
-        run: |
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          aws configure set region auto
-          aws configure set output "json"
+      - name: Upload MacOS Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-build
+          path: ./velopack
+          retention-days: 1
 
-          # Upload release assets
-          aws s3 sync ./velopack s3://vatis-releases/macos \
-            --exclude "$PREVIOUS_RELEASE" \
-            --exclude "assets.osx.json" \
-            --exclude "RELEASES-osx" \
-            --exclude "vATIS.app/*" \
-            --exclude "org.vatsim.vatis-osx-Portable.zip" \
-            --endpoint-url "${{secrets.AWS_ENDPOINT}}"
-
-  release-windows:
-    name: Release (windows-x64)
+  build-windows:
+    name: Build (windows-x64)
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
@@ -465,7 +439,7 @@ jobs:
 
           # Capture filename to ignore later so we don't upload it twice
           FILE=$(find ./velopack -type f -printf '%P\n')
-          echo "PREVIOUS_RELEASE=$FILE" >> $GITHUB_ENV
+          echo "WINDOWS_PREVIOUS_RELEASE=$FILE" >> $GITHUB_OUTPUT
 
       - name: Create TrustedSigning Metadata
         env:
@@ -501,8 +475,37 @@ jobs:
               --skipVeloAppCheck \
               --verbose
 
-      - name: Upload release assets
-        shell: bash
+      - name: Upload Windows Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-build
+          path: ./build
+          retention-days: 1
+
+  upload-release-assets:
+    name: Upload Release Assets
+    runs-on: ubuntu-latest
+    needs: ['build-linux','build-macos','build-windows']
+    steps:
+      - name: Download Linux Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-build
+          path: ./linux-build
+
+      - name: Download macOS Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: macos-build
+          path: ./macos-build
+
+      - name: Download Windows Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: windows-build
+          path: ./windows-build
+
+      - name: Upload release assets to AWS S3
         run: |
           aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
           aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
@@ -511,19 +514,34 @@ jobs:
           aws configure set request_checksum_calculation when_required
           aws configure set response_checksum_validation when_required
 
-          # Rename AppImage
-          mv ./velopack/org.vatsim.vatis-win-Setup.exe ./velopack/vATIS-Setup.exe
-
-          # Upload release assets
-          aws s3 sync ./velopack s3://vatis-releases/windows \
-            --exclude "$PREVIOUS_RELEASE" \
-            --exclude "assets.win.json" \
-            --exclude "RELEASES" \
+          # Upload Linux Assets
+          mv ./linux-build/org.vatsim.vatis.AppImage ./linux-build/vATIS.AppImage
+          aws s3 sync ./linux-build s3://vatis-releases/linux \
+            --exclude "${{ needs.build-linux.outputs.PREVIOUS_RELEASE }}" \
+            --exclude "assets.linux.json" \
+            --exclude "RELEASES-linux" \
             --endpoint-url "${{secrets.AWS_ENDPOINT}}"
+          
+          # Upload MacOS
+          aws s3 sync ./macos-build s3://vatis-releases/macos \
+            --exclude "${{ needs.build-macos.outputs.PREVIOUS_RELEASE }}" \
+            --exclude "assets.osx.json" \
+            --exclude "RELEASES-osx" \
+            --exclude "vATIS.app/*" \
+            --exclude "org.vatsim.vatis-osx-Portable.zip" \
+            --endpoint-url "${{secrets.AWS_ENDPOINT}}"
+
+          # Upload Windows
+          mv ./windows-build/org.vatsim.vatis-win-Setup.exe ./windows-build/vATIS-Setup.exe
+          aws s3 sync ./windows-build s3://vatis-releases/windows \
+            --exclude "${{ needs.build-windows.outputs.PREVIOUS_RELEASE }}" \
+            --exclude "RELEASES" \
+            --exclude "assets.win.json" \
+            --endpoint-url "${{ secrets.AWS_ENDPOINT }}"
 
   publish-release:
     name: Publish GitHub Release
-    needs: ['release-linux','release-macos','release-windows']
+    needs: [upload-release-assets]
     if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.github-release == 'true' }}
     runs-on: ubuntu-latest
     steps:
