--- a/vATIS.Desktop/vATIS.Desktop.csproj
+++ b/vATIS.Desktop/vATIS.Desktop.csproj
@@ -61,6 +61,7 @@
 		<PackageReference Include="Avalonia.Controls.ItemsRepeater" Version="11.1.5" />
 		<PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.2.0.1" />
 		<PackageReference Include="Concentus" Version="2.2.2" />
+		<PackageReference Include="Markdown.Avalonia" Version="11.0.3-a1" />
 		<PackageReference Include="MessagePack" Version="3.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.11" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
