Improve exception logging

--- a/vATIS.Desktop/vATIS.Desktop.csproj
+++ b/vATIS.Desktop/vATIS.Desktop.csproj
@@ -50,6 +50,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AsyncAwaitBestPractices" Version="9.0.0" />
 		<PackageReference Include="Avalonia" Version="11.2.2" />
 		<PackageReference Include="Avalonia.Controls.DataGrid" Version="11.2.2" />
 		<PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.1.0" />
