Fix condition logic check for skipping CI

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -8,9 +8,9 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
-    if: "!(contains(github.event.pull_request.title, '[skip ci]') || 
-      contains(github.event.pull_request.body, '[skip ci]') || 
-      contains(join(github.event.pull_request.labels.*.name, ','), 'skip ci'))"
+    if: ${{ !contains(github.event.pull_request.title, '[skip ci]') && 
+        !contains(github.event.pull_request.body, '[skip ci]') && 
+        !contains(join(github.event.pull_request.labels.*.name, ','), 'skip ci') }}
     permissions:
       actions: read
       contents: read
