--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    if: "!(contains(github.event.pull_request.title, '[skip ci]') || 
-      contains(github.event.pull_request.body, '[skip ci]') || 
-      contains(join(github.event.pull_request.labels.*.name, ','), 'skip ci'))"
+    if: ${{ !contains(github.event.pull_request.title, '[skip ci]') && 
+        !contains(github.event.pull_request.body, '[skip ci]') && 
+        !contains(join(github.event.pull_request.labels.*.name, ','), 'skip ci') }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
