Implement new way to present error/warning notifications

--- a/.editorconfig
+++ b/.editorconfig
@@ -172,9 +172,12 @@ dotnet_diagnostic.SA1116.severity = none # Parameters must start on line after d
 dotnet_diagnostic.SA1117.severity = none # Parameters must be on separate lines
 dotnet_diagnostic.SA1118.severity = none # The parameter spans multiple lines
 dotnet_diagnostic.SA1122.severity = none # Use string.Empty for empty strings
+dotnet_diagnostic.SA1306.severity = none # Field name must begin with lower case letter
 dotnet_diagnostic.SA1308.severity = none # Static fields should not begin with the prefix 's_'
 dotnet_diagnostic.SA1309.severity = none # Field name begins with underscore
+dotnet_diagnostic.SA1310.severity = none # Allow underscores
 dotnet_diagnostic.SA1311.severity = none # Static readonly fields should begin with upper-case letter
+dotnet_diagnostic.SA1401.severity = none # Allow none-private field
 dotnet_diagnostic.SA1413.severity = none # Last statement trailing comma
 dotnet_diagnostic.SA1503.severity = none # Braces should not be omitted
 dotnet_diagnostic.SA1633.severity = none # StyleCop header
