Use svg files for button icons

--- a/vATIS.Desktop/vATIS.Desktop.csproj
+++ b/vATIS.Desktop/vATIS.Desktop.csproj
@@ -55,6 +55,7 @@
 		<PackageReference Include="Avalonia.Controls.DataGrid" Version="11.2.8" />
 		<PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.1.1" />
 		<PackageReference Include="Avalonia.Desktop" Version="11.2.8" />
+		<PackageReference Include="Avalonia.Svg" Version="11.2.8" />
 		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.8" />
 		<PackageReference Include="Avalonia.ReactiveUI" Version="11.2.8" />
 		<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
